--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -15,7 +15,12 @@
     <!-- Activity -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin_top">2dp</dimen>
+    <dimen name="activity_vertical_margin_top">32dp</dimen>
+    <dimen name="activity_vertical_margin_top_small">10dp</dimen>
+    <dimen name="activity_vertical_margin_top_mini">10dp</dimen>
+
+
+
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">180dp</dimen>
 
@@ -23,7 +28,7 @@
     <dimen name="text_size_micro">10sp</dimen>
     <dimen name="text_size_mini">12sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
-    <dimen name="text_size_medium">18sp</dimen>
+    <dimen name="text_size_medium">15sp</dimen>
     <dimen name="text_size_medium_large">20sp</dimen>
     <dimen name="text_size_large">22sp</dimen>
     <dimen name="text_size_extra_large">30sp</dimen>
@@ -41,6 +46,7 @@
 
     <!-- Button -->
     <dimen name="button_radius">20dp</dimen>
+    <dimen name="padding_button">15dp</dimen>
 
     <!-- Margin -->
     <dimen name="margin_bottom_logo">70dp</dimen>
