--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,11 +47,19 @@
         <item name="backgroundTint">@color/blue_link</item>
     </style>
 
-    <style name="button_secondary" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:textSize">16sp</item>
+    <style name="button_secondary" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/grey</item>
+
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
+
+        <item name="android:padding">@dimen/padding_button</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+
         <item name="android:textColor">@color/white</item>
-        <item name="backgroundTint">@color/grey</item>
     </style>
 
 
@@ -59,12 +67,15 @@
         <!--<item name="android:background">@drawable/button_primary_background</item>-->
         <!--<item name="android:textColor">@drawable/button_primary_textcolor</item>-->
         <item name="android:backgroundTint">@color/red</item>
+
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">sans-serif</item>
-
-
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
+
+        <item name="android:padding">@dimen/padding_button</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
 
 
     </style>
