--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -19,10 +19,10 @@
 
 
             <TextView
-                android:id="@+id/textview_alert_message_loginform2"
+                android:id="@+id/textview_alert_message_loginform"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="wrong pass"
+                android:text=""
                 android:visibility="invisible"
 
                 android:textAlignment="center"
