--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias=".3"
             app:layout_constraintWidth_percent="0.8"
-            android:text="Map">
+            android:text="Test button">
 
         </Button>
 
