--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,6 +54,7 @@
         <fragment
             android:layout_height="0dp"
             android:layout_width="match_parent"
+            android:background="@drawable/shape_round_white"
 
             android:id="@+id/fragment_register"
             class="com.poma.restaurant.login.Fragment_Register"
@@ -66,7 +67,8 @@
             app:layout_constraintHeight_percent="1"
 
             app:layout_constraintVertical_bias="1"
-            app:layout_constraintHorizontal_bias=".5"/>
+            app:layout_constraintHorizontal_bias=".5"
+            android:visibility="visible"/>
 
 
 
