--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -217,6 +217,32 @@
 
             </androidx.appcompat.widget.AppCompatSpinner>
 
+            <TextView
+                android:id="@+id/textview_registerform_retrieve_cities"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_username"
+                android:textAlignment="center"
+
+
+                android:text="@string/loading_cities"
+
+                android:textSize="@dimen/text_size_medium"
+
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
+
+            </TextView>
+
             <EditText
                 android:id="@+id/edittext_registerform_location"
                 android:visibility="gone"
